test-cases/valid/reject/return_void_expression.ul
void main() {
    foo();
}

string foo() {
    return bar(); // Returning a void "value"
}

void bar() {
    ;
}
